--- a/blog/templates/blog/comment_delete.html
+++ b/blog/templates/blog/comment_delete.html
@@ -12,6 +12,11 @@
     <div class="modal-body">
         <p class="lead" style="color: black;">Are you sure you want to delete this {% if com.question %}answer{% else %}comment{% endif %}? All associated replies will also be deleted permanently!.</p>
     </div>
+    <div class="clearfix hidden">
+        <div class="spinner-grow text-primary float-end">
+            <span class="visually-hidden" >Loading...</span>
+        </div>    
+    </div>
     <div class="modal-footer" style="background-color: #76b852;">
         <button type="button" class="btn btn-default" data-dismiss="modal"style="font-weight: bold; color: red;">Close</button>
         <button type="submit" class="btn btn-danger">Delete</button>
