--- a/blog/templates/blog/comment_form.html
+++ b/blog/templates/blog/comment_form.html
@@ -13,4 +13,9 @@
             {% render_field form.reply style="width:230px;" %}
         </div>
         {% endif %}
+        <div class="clearfix hidden">
+            <div class="spinner-grow text-primary float-end">
+                <span class="visually-hidden" >Loading...</span>
+            </div>    
+        </div>
     {% endif %}
