--- a/blog/templates/blog/news_form.html
+++ b/blog/templates/blog/news_form.html
@@ -56,6 +56,12 @@
     </div>
 </div>
 
+<div class="clearfix hidden">
+    <div class="spinner-grow text-primary float-end">
+        <span class="visually-hidden" >Loading...</span>
+    </div>    
+</div>
+
 <script type="text/javascript">
     var url = "{% static 'js/form.js' %}"
     $.getScript(url);
