--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -57,6 +57,12 @@
             </div>
         </div>
     </div>
+    
+    <div class="clearfix hidden">
+        <div class="spinner-grow text-primary float-end">
+            <span class="visually-hidden" >Loading...</span>
+        </div>    
+    </div>
 
     <script type="text/javascript">
         var url = "{% static 'js/form.js' %}"
