--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -13,13 +13,7 @@
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.min.css">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css">
-<!--
-    
-TemplateMo 553 Xtra Blog
 
-https://templatemo.com/tm-553-xtra-blog
-
--->
 </head>
 <body>
 	<header class="tm-header" id="tm-header">
@@ -125,15 +119,11 @@ https://templatemo.com/tm-553-xtra-blog
 
             {% endblock %}  
             <footer class="row tm-row">
-                <div class="card-group">
                     <hr class="col-12">
-                    <div class="tm-color-gray des kay">
-                        Design: <a rel="nofollow" target="_blank" href="https://templatemo.com" class="tm-external-link">TemplateMo</a>
+                    <div class="col-md-6 col-12 tm-color-gray">
+                        B-Dev: <a rel="nofollow" target="_blank" href="https://wa.me/2348095602320" class="tm-external-link">Kay Programmer</a>
                     </div>
-                    <div class="tm-color-gray mod kay">
-                        Modified: <a rel="nofollow" target="_blank" href="https://wa.me/2348095602320" class="tm-external-link">Kay Programmer</a>
-                    </div>
-                    <div class=" tm-color-gray tm-copyright kay">
+                    <div class="col-md-6 col-12 tm-color-gray tm-copyright">
                         Copyright {% now "Y" %} HopTeens Blog.
                     </div>
                 </div>
